--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.5
   country_code_picker: ^1.1.5
-  http: ^0.12.2
+  http: ^0.13.3
   pin_code_text_field: ^1.6.0
   flutter_countdown_timer: ^4.0.2
   auto_size_text: ^2.1.0
@@ -39,6 +39,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.3.0
   textfield_tags: ^1.1.1
   adaptive_dialog: ^0.10.0+5
+  cached_network_image: ^3.0.0
 
 dev_dependencies:
   flutter_test:
